# Investment_Platform

./: .cursorrules  .dockerignore.api  .env.example  .gitignore  CODE_REVIEW_REPORT.md  DEVELOPMENT_WORKFLOW.md  DOCKER_DEVELOPMENT.md  Dockerfile.api  Dockerfile.scheduler  INSTALL_PYTHON.md  QUICK_DOCKER_UPDATE.md  README.md  SCHEDULER_API_TESTING_README.md  SCHEDULER_API_TESTING_SUMMARY.md  TEST_REPORT.md  browser_test_nvda_jobs.md  coverage.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt  run_full_scheduler_tests.py  run_scheduler_api_tests_cycle.py  scheduler-api-test-fixes.md  scheduler-api-test-issues-cycle1.md  scheduler-api-test-issues.md  scheduler-api-test-results-20251201-144130.json  scheduler-api-test-results-20251201-145227.json  scheduler-api-test-results-20251201-151339.json  scheduler-api-test-results-20251201-151531.json  scheduler-api-test-results-20251201-151815.json  scheduler-api-test-results-20251201-152641.json  scheduler-api-test-results-20251201-153256.json  scheduler-api-test-results-20251201-161136.json  scheduler-api-test-results-20251201-161325.json  scheduler-api-test-results-20251201-162316.json  scheduler-api-test-results-20251201-162713.json  scheduler-api-test-results-20251201-162759.json  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md
backlog/: 2024-12-19-backend-coverage-gaps.md  2024-12-19-backend-test-failures-qa-summary.md  2024-12-19-backend-test-failures.md  2024-12-19-backend-test-quality-issues.md  2024-12-19-backlog-prioritization-review.md
config/: scheduler_config.yaml.example
docs/: TEST_FAILURE_WORKFLOW.md  development-standards.md  environment-variables.md  refactor-proposal-best-practices.md  software-architecture.md  testing-standards.md  ux-standards.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  (+3 more)
(+224 files in other folders)
